fixing dropdown spacing and adding queries file

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1 {
 .filter {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -54,12 +55,13 @@ h1 {
 .dropdown {
   position: relative;
   text-align: center;
+  min-width: 20rem;
 }
 
 .dropdown-selected {
   background-color: #0018a4;
   color: #fafbff;
-  padding: 5px 10px;
+  padding: 0.5rem 1rem;
   border-radius: 50px;
   cursor: pointer;
 }
